Prepare for release v1.14.5
Signed-off-by: Maciej Kwiek <maciej@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -116,6 +116,7 @@ chentanjun                              tanjunchen20@gmail.com
 chenyahui                               chenyahui9@jd.com
 Chen Yaqi                               chenyaqi01@baidu.com
 chenyuezhou                             zcy.chenyue.zhou@gmail.com
+chez-shanpu                             tomoki-sugiura@cybozu.co.jp
 Chris Tarazi                            chris@isovalent.com
 Christian Hörtnagl                      christian2@univie.ac.at
 Christian Hüning                        christian.huening@finleap.com
@@ -626,7 +627,7 @@ vakr                                    vakr@microsoft.com
 Valas Valancius                         valas@google.com
 Vance Li                                vanceli@tencent.com
 Vigneshwaren Sunder                     vickymailed@gmail.com
-viktor-kurchenko                        69600804+viktor-kurchenko@users.noreply.github.com
+viktor-kurchenko                        viktor.kurchenko@isovalent.com
 Viktor Kuzmin                           kvaster@gmail.com
 Viktor Oreshkin                         imselfish@stek29.rocks
 Ville Ojamo                             bluikko@users.noreply.github.com
