Prepare for release v1.12.18
Signed-off-by: Maxim Mikityanskiy <maxim@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -286,6 +286,7 @@ Liu Qun                                 qunliu@zyhx-group.com
 Livingstone S E                         livingstone.s.e@gmail.com
 Li Yi                                   denverdino@gmail.com
 Liz Rice                                liz@lizrice.com
+Lorenz Bauer                            lmb@isovalent.com
 Lorenzo Fundaró                         lorenzofundaro@gmail.com
 Louis DeLosSantos                       louis@isovalent.com
 lou-lan                                 loulan@loulan.me
@@ -452,6 +453,7 @@ Stevo Slavić                            sslavic@gmail.com
 Stijn Smits                             stijn@stijn98s.nl
 Strukov Anton                           anstrukov@luxoft.com
 Sugang Li                               sugangli@google.com
+Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
 Tam Mach                                tam.mach@cilium.io
