Prepare for release v1.13.11
Signed-off-by: Maxim Mikityanskiy <maxim@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -324,6 +324,7 @@ Lorenz Bauer                            lmb@isovalent.com
 Lorenzo Fundaró                         lorenzofundaro@gmail.com
 Louis DeLosSantos                       louis@isovalent.com
 lou-lan                                 loulan@loulan.me
+Lucas Leblow                            lucasleblow@mailbox.org
 lucming                                 2876757716@qq.com
 Maartje Eyskens                         maartje.eyskens@isovalent.com
 Maciej Fijalkowski                      maciej.fijalkowski@intel.com
@@ -519,6 +520,7 @@ Sugang Li                               sugangli@google.com
 Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
+Tamilmani                               tamanoha@microsoft.com
 Tam Mach                                tam.mach@cilium.io
 tanberBro                               pengfei.song@daocloud.io
 Tasdik Rahman                           prodicus@outlook.com
