Prepare for release v1.14.6
Signed-off-by: Maxim Mikityanskiy <maxim@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -133,6 +133,7 @@ cleverhu                                shouping.hu@daocloud.io
 cndoit18                                cndoit18@outlook.com
 Connor Jones                            cj@cjmakes.com
 Cookie Wang                             luckymrwang@163.com
+cornfeedhobo                            cornfeedhobo@fuzzlabs.org
 Craig Box                               craig.box@gmail.com
 cui fliter                              imcusg@gmail.com
 Cynthia Thomas                          cynthia@covalent.io
@@ -361,6 +362,7 @@ Lorenz Bauer                            lmb@isovalent.com
 Lorenzo Fundaró                         lorenzofundaro@gmail.com
 Louis DeLosSantos                       louis@isovalent.com
 lou-lan                                 loulan@loulan.me
+Lucas Leblow                            lucasleblow@mailbox.org
 lucming                                 2876757716@qq.com
 Maartje Eyskens                         maartje.eyskens@isovalent.com
 Maciej Fijalkowski                      maciej.fijalkowski@intel.com
@@ -586,7 +588,7 @@ Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
 Takayoshi Nishida                       takayoshi.nishida@gmail.com
-Tamilmani                               tamanoha@microsoft.comwq
+Tamilmani                               tamanoha@microsoft.com
 Tam Mach                                tam.mach@cilium.io
 Tasdik Rahman                           prodicus@outlook.com
 Te-Yu Chang                             dale.teyuchang@gmail.com
