Prepare for release v1.12.19
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -171,6 +171,7 @@ Fankaixi Li                             fankaixi.li@bytedance.com
 Federico Hernandez                      f@ederi.co
 Feroz Salam                             feroz.salam@isovalent.com
 FeynmanZhou                             pengfeizhou@yunify.com
+Filip Nikolic                           oss.filipn@gmail.com
 Florian Koch                            f0@users.noreply.github.com
 Florian Lehner                          dev@der-flo.net
 flxman                                  felix.farjsjo@gmail.com
@@ -456,6 +457,7 @@ Sugang Li                               sugangli@google.com
 Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
+Tamilmani                               tamanoha@microsoft.comwq
 Tam Mach                                tam.mach@cilium.io
 Tasdik Rahman                           prodicus@outlook.com
 Te-Yu Chang                             dale.teyuchang@gmail.com
