Prepare for release v1.14.7
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,7 +46,7 @@ Andrew Sy Kim                           kim.andrewsy@gmail.com
 Andrey Devyatkin                        andrey.devyatkin@fivexl.io
 Andrey Klimentyev                       andrey.klimentyev@flant.com
 Andrey Voronkov                         voronkovaa@gmail.com
-Andrii Iuspin                           yuspin@gmail.com
+Andrii Iuspin                           andrii.iuspin@isovalent.com
 Andrzej Mamak                           nqaegg@gmail.com
 Andy Allred                             andy@punasusi.com
 Aniruddha Amit Dutta                    duttaaniruddha31@gmail.com
@@ -87,7 +87,7 @@ Benoît Sauvère                          benoit.sauvere@backmarket.com
 Bill Mulligan                           billmulligan516@gmail.com
 Bingshen Wang                           bingshen.wbs@alibaba-inc.com
 Bingwu Yang                             detailyang@gmail.com
-Birol Bilgin                            birol@cilium.io
+Birol Bilgin                            birolbilgin@gmail.com
 Bob Bouteillier                         bob.bouteillier@datadoghq.com
 Bokang Li                               libokang.dev@gmail.com
 Bolun Zhao                              blzhao@google.com
@@ -220,6 +220,7 @@ fengshunli                              1171313930@qq.com
 Fernand Galiana                         fernand.galiana@gmail.com
 Feroz Salam                             feroz.salam@isovalent.com
 FeynmanZhou                             pengfeizhou@yunify.com
+Filip Nikolic                           oss.filipn@gmail.com
 Fish-pro                                zechun.chen@daocloud.io
 Florian Koch                            f0@users.noreply.github.com
 Florian Lehner                          dev@der-flo.net
@@ -230,6 +231,7 @@ Frederic Branczyk                       fbranczyk@gmail.com
 Fred Hsu                                fredlhsu@gmail.com
 Fredrik Lönnegren                       fredrik.lonnegren@gmail.com
 Fulvio Risso                            fulvio.risso@polito.it
+gailsuccess                             157372272+gailsuccess@users.noreply.github.com
 Gaurav Genani                           h3llix.pvt@gmail.com
 Gaurav Yadav                            gaurav.dev.iiitm@gmail.com
 Gavin McNair                            gavin.mcnair@kaluza.com
@@ -343,6 +345,7 @@ Koichiro Den                            den@klaipeden.com
 Konstantin Aksenov                      konstantin.aksenov@flant.com
 Kornilios Kourtis                       kornilios@isovalent.com
 Laurent Bernaille                       laurent.bernaille@datadoghq.com
+ldelossa                                louis.delos@gmail.com
 Lehner Florian                          dev@der-flo.net
 Leonard Cohnen                          lc@edgeless.systems
 leonliao                                xiaobo.liao@gmail.com
@@ -520,6 +523,7 @@ Rei Shimizu                             Shikugawa@gmail.com
 Rémy Léone                              rleone@scaleway.com
 Renat Tuktarov                          yandzeek@gmail.com
 Rene Luria                              rene@luria.ch
+René Veenhuis                           re.veenhuis@gmail.com
 Rene Zbinden                            rene.zbinden@postfinance.ch
 Richard Lavoie                          richard.lavoie@logmein.com
 Richard Tweed                           RichardoC@users.noreply.github.com
@@ -570,6 +574,7 @@ Sigurd Spieckermann                     sigurd.spieckermann@gmail.com
 Simone Sciarrati                        s.sciarrati@gmail.com
 Simon Pasquier                          spasquier@mirantis.com
 Smaine Kahlouch                         smainklh@gmail.com
+soggiest                                nicholas@isovalent.com
 spacewander                             spacewanderlzx@gmail.com
 Stacy Kim                               stacy.kim@ucla.edu
 Stephen Martin                          lockwood@opperline.com
@@ -588,7 +593,7 @@ Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
 Takayoshi Nishida                       takayoshi.nishida@gmail.com
-Tamilmani                               tamanoha@microsoft.com
+Tamilmani                               tamanoha@microsoft.comwq
 Tam Mach                                tam.mach@cilium.io
 Tasdik Rahman                           prodicus@outlook.com
 Te-Yu Chang                             dale.teyuchang@gmail.com
@@ -612,6 +617,7 @@ Tobias Klauser                          tobias@cilium.io
 Tobias Kohlbau                          tobias@kohlbau.de
 Tobias Mose                             mosetobias@gmail.com
 Tom Hadlaw                              tom.hadlaw@isovalent.com
+Tommo Cowling                           952241+tlcowling@users.noreply.github.com
 Tomoki Sugiura                          cheztomo513@gmail.com
 Tomoya Fujita                           Tomoya.Fujita@sony.com
 Tom Payne                               twpayne@gmail.com
@@ -668,6 +674,7 @@ yanhongchang                            yanhongchang@100tal.com
 Yash Shetty                             yashshetty@google.com
 Ye Sijun                                junnplus@gmail.com
 Yiannis Yiakoumis                       yiannis@selfienetworks.com
+Yingnan Zhang                           342144303@qq.com
 Yongkun Gui                             ygui@google.com
 Yosh de Vos                             yosh@elzorro.nl
 youhonglian                             honglian.you@daocloud.io
