Prepare for release v1.13.12
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,7 +41,7 @@ Andrew Sy Kim                           kim.andrewsy@gmail.com
 Andrey Devyatkin                        andrey.devyatkin@fivexl.io
 Andrey Klimentyev                       andrey.klimentyev@flant.com
 Andrey Voronkov                         voronkovaa@gmail.com
-Andrii Iuspin                           yuspin@gmail.com
+Andrii Iuspin                           andrii.iuspin@isovalent.com
 Andrzej Mamak                           nqaegg@gmail.com
 Aniruddha Amit Dutta                    duttaaniruddha31@gmail.com
 Anish Shah                              anishshah@google.com
@@ -76,7 +76,7 @@ Benjamin Pineau                         benjamin.pineau@datadoghq.com
 Bill Mulligan                           billmulligan516@gmail.com
 Bingshen Wang                           bingshen.wbs@alibaba-inc.com
 Bingwu Yang                             detailyang@gmail.com
-Birol Bilgin                            birol@cilium.io
+Birol Bilgin                            birolbilgin@gmail.com
 Bob Bouteillier                         bob.bouteillier@datadoghq.com
 Bokang Li                               libokang.dev@gmail.com
 Bolun Zhao                              blzhao@google.com
@@ -192,6 +192,7 @@ Federico Hernandez                      f@ederi.co
 Felix Färjsjö                           felix.farjsjo@gmail.com
 Feroz Salam                             feroz.salam@isovalent.com
 FeynmanZhou                             pengfeizhou@yunify.com
+Filip Nikolic                           oss.filipn@gmail.com
 Florian Koch                            f0@users.noreply.github.com
 Florian Lehner                          dev@der-flo.net
 Francois Allard                         francois@breathelife.com
@@ -201,6 +202,7 @@ Fred Hsu                                fredlhsu@gmail.com
 Fredrik Lönnegren                       fredrik.lonnegren@gmail.com
 fsl                                     1171313930@qq.com
 Fulvio Risso                            fulvio.risso@polito.it
+gailsuccess                             157372272+gailsuccess@users.noreply.github.com
 Gaurav Genani                           h3llix.pvt@gmail.com
 Gaurav Yadav                            gaurav.dev.iiitm@gmail.com
 Gavin McNair                            gavin.mcnair@kaluza.com
@@ -520,7 +522,7 @@ Sugang Li                               sugangli@google.com
 Sven Haardiek                           sven.haardiek@uni-muenster.de
 Swaminathan Vasudevan                   svasudevan@suse.com
 Taeung Song                             treeze.taeung@gmail.com
-Tamilmani                               tamanoha@microsoft.com
+Tamilmani                               tamanoha@microsoft.comwq
 Tam Mach                                tam.mach@cilium.io
 tanberBro                               pengfei.song@daocloud.io
 Tasdik Rahman                           prodicus@outlook.com
@@ -543,6 +545,7 @@ Tobias Klauser                          tobias@cilium.io
 Tobias Kohlbau                          tobias@kohlbau.de
 Tobias Mose                             mosetobias@gmail.com
 Tom Hadlaw                              tom.hadlaw@isovalent.com
+Tommo Cowling                           952241+tlcowling@users.noreply.github.com
 Tomoki Sugiura                          cheztomo513@gmail.com
 Tom Payne                               tom@isovalent.com
 Tony Lambiris                           tony@criticalstack.com
